--- a/Movie/src/Component/Footer/Footer.css
+++ b/Movie/src/Component/Footer/Footer.css
@@ -1,6 +1,6 @@
 /* Movie-project/Movie/src/Component/Footer/Footer.css */
 .footer {
-  background: #141414;
+  background-color: #141414;
   color: #b3b3b3;
   padding: 40px 0 20px 0;
   text-align: center;
